@@ -1,15 +1,15 @@
-7e3e9a2c4ba0726c15301d9c417109d5 *ChangeLog
-38e61c32b2042c652c54318380891f51 *DESCRIPTION
+63208c2a64c7c36f781a9f6c7cf34510 *ChangeLog
+c967bdd8eb6bbce223a51c696aaa4f6e *DESCRIPTION
 aebc6434c2bd0e35d0859aaf33c5a327 *NAMESPACE
 9e09efea579c29473fbfc2860caad616 *R/fitOpWit.R
 306f3f240bd512e3f6cc21b33200576d *R/match.position.R
 b0ff5b90216148da7fe759ba38ad2bae *R/parentsFun.R
 1bf6f25a5210d57af68728c61c6d73af *R/witness-internal.R
 f9e772b02ad8fbe6865ad6c535826f8c *R/witness-package.R
-74edce411e305a13eb9fbc2b2a1b721f *R/witness.est.r
-e5e6f7dfe32cc9fffbd888663bcedaea *R/witness.genetic.R
-5b6c36a432dbbd188704938c258b4a24 *R/witness.optim.R
-698a278e4fd00fafd7b62ac1c1199377 *R/witness.starting.params.R
+e1dd849c94282d23d0ba3c4ea895462f *R/witness.est.r
+a5ce8237a48a284028a42ca2e29b8d65 *R/witness.genetic.R
+41ff8ac4b0f752c2f0ad338ac165a419 *R/witness.optim.R
+88818d86428695ef90ff83acae87d456 *R/witness.starting.params.R
 ac86bc3b044732069d91af012f9640f3 *R/witness.test.r
 9ed72134987e27fdc838c6a53591acd8 *man/witness-package.Rd
 f0375c4e92923dca10c4c8908925e076 *man/witness.est.Rd
